--- a/pepeizqs deals web/Areas/Identity/Componentes/Sorteos.razor
+++ b/pepeizqs deals web/Areas/Identity/Componentes/Sorteos.razor
@@ -150,6 +150,8 @@
 							<button class="boton-pequeño" style="padding: 10px 15px; max-width: 250px;" @onclick="@(e => EnviarSolicitud(e))">
 								@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String86")
 							</button>
+
+							<a href="/imagenes/otros/donacionhumble.png" target="_blank" style="text-decoration: none; margin-top: 15px;">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String92")</a>
 						</div>
 					}
 
