--- a/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
@@ -82,15 +82,31 @@
         <div style="display: flex; align-items: start; margin-top: 15px; width: 100%; font-size: 17px;">
             <div style="width: 15%;">
                 <div class="perfil" style="padding: 10px 0px; border: 1px solid var(--fondoBoton);">
-                    <a class="admin-lateral" href="https://win6052.site4now.net/stats/awstats.pl?config=1112749300&h=8d43503475c9993340908170c2f4b9da" style="text-decoration: none;">Visitas</a>
-                    <button class="admin-lateral" @onclick="(e => MostrarCerrarCorreos(e))">Correos @nuevosCorreosMensaje2</button>
-                    <button class="admin-lateral" @onclick="(e => MostrarCerrarSolicitudes(e))">Solicitudes @nuevasSolicitudesMensaje</button>
+                    @if (nuevosErroresCantidad > 0)
+                    {
+                        <button class="admin-lateral" @onclick="(e => MostrarCerrarErrores(e))">Errores @nuevosErroresMensaje</button>
+                    }
+
+                    @if (nuevosCorreosCantidad > 0)
+                    {
+                        <button class="admin-lateral" @onclick="(e => MostrarCerrarCorreos(e))">Correos @nuevosCorreosMensaje2</button>                        
+                    }
+
+                    @if (nuevosPendientesCantidad > 0)
+                    {
+                        <button class="admin-lateral" @onclick="(e => MostrarCerrarPendientes(e))">Pendientes @nuevosPendientesMensaje</button>
+                    }
+
+                    @if (nuevasSolicitudesCantidad > 0)
+                    {
+                        <button class="admin-lateral" @onclick="(e => MostrarCerrarSolicitudes(e))">Solicitudes @nuevasSolicitudesMensaje</button>                        
+                    }
+
+                    <a class="admin-lateral" href="https://win6052.site4now.net/stats/awstats.pl?config=1112749300&h=8d43503475c9993340908170c2f4b9da" style="text-decoration: none;">Visitas</a>                                        
                     <button class="admin-lateral" @onclick="(e => MostrarCerrarAvisos(e))">Avisos</button>
                     <button class="admin-lateral" @onclick="(e => MostrarCerrarTiendas(e))">Tiendas</button>
-                    <button class="admin-lateral" @onclick="(e => MostrarCerrarDivisas(e))">Divisas</button>
-                    <button class="admin-lateral" @onclick="(e => MostrarCerrarPendientes(e))">Pendientes @nuevosPendientesMensaje</button>
-                    <button class="admin-lateral" @onclick="(e => MostrarCerrarDLCs(e))">DLCs @nuevosDLCsMensaje</button>
-                    <button class="admin-lateral" @onclick="(e => MostrarCerrarErrores(e))">Errores @nuevosErroresMensaje</button>
+                    <button class="admin-lateral" @onclick="(e => MostrarCerrarDivisas(e))">Divisas</button>                
+                    <button class="admin-lateral" @onclick="(e => MostrarCerrarDLCs(e))">DLCs @nuevosDLCsMensaje</button>                   
                 </div>
 
                 <label style="margin-top: 40px; padding-left: 20px; padding-bottom: 15px;">Añadir</label>
@@ -146,16 +162,26 @@
                 {
                     <div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton);">
                         <div style="display: flex; align-items: center;">
-                            <textarea @oninput="@(e => ActualizarAviso(e, "en"))" class="entrada-texto" style="height: 35px;" placeholder="EN">@avisoEn</textarea>
+                            <textarea @oninput="@(e => CambiarAvisoEn(e))" class="entrada-texto" style="height: 35px;" placeholder="EN">@avisoEn</textarea>
                         </div>
 
                         <div style="display: flex; align-items: center; margin-top: 20px;">
-                            <textarea @oninput="@(e => ActualizarAviso(e, "es"))" class="entrada-texto" style="height: 35px;" placeholder="ES">@avisoEs</textarea>
+                            <textarea @oninput="@(e => CambiarAvisoEs(e))" class="entrada-texto" style="height: 35px;" placeholder="ES">@avisoEs</textarea>
                         </div>
 
-                        <button class="boton-pequeño" style="padding: 10px 15px; max-width: 250px; margin-top: 30px;" @onclick="@(e => BorrarAviso(e))">
-                            Borrar Aviso
-                        </button>
+                        <div style="display: flex; align-items: center; margin-top: 20px;">
+                            <textarea @oninput="@(e => CambiarAvisoEnlace(e))" class="entrada-texto" style="height: 35px;" placeholder="Enlace">@avisoEnlace</textarea>
+                        </div>
+
+                        <div style="display: flex; align-items: center; margin-top: 30px;">
+                            <button class="boton-pequeño" style="padding: 10px 15px; max-width: 250px; margin-right: 30px;" @onclick="@(e => ActualizarAviso(e))">
+                                Actualizar
+                            </button>
+
+                            <button class="boton-pequeño" style="padding: 10px 15px; max-width: 250px;" @onclick="@(e => BorrarAviso(e))">
+                                Borrar
+                            </button>
+                        </div>
                     </div>
                 }
 
@@ -166,6 +192,10 @@
                         <div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton);">
                             @foreach (var solicitud in listaSolicitudes)
                             {
+                                <div style="display: flex; align-items: center;">
+                                    <a href="https://steamcommunity.com/groups/pepeizqdeals2/joinRequestsManage" target="_blank" style="margin-right: 20px;">Grupo Steam</a>
+                                    <a href="https://www.humblebundle.com/accounting/partner/sales_reports" target="_blank">Informe Humble</a>                                  
+                                </div>
                                 <hr/>
                                 <div style="display: flex; align-items: center;">
                                     <div style="display: flex; align-items: center; width: 100%;">
@@ -182,8 +212,12 @@
                                         </div>
                                     </div>
 
-                                    <button class="boton-pequeño" style="padding: 10px 15px; max-width: 120px;" @onclick="@(e => BorrarAviso(e))">
-                                        Borrar
+                                    <button class="boton-pequeño" style="padding: 10px 15px; max-width: 120px; width: auto; margin-right: 20px;" @onclick="@(e => AprobarSolicitud(e, solicitud))">
+                                        <i class="fa-solid fa-check"></i>
+                                    </button>
+
+                                    <button class="boton-pequeño" style="padding: 10px 15px; max-width: 120px; width: auto;" @onclick="@(e => BorrarSolicitud(e, solicitud))">
+                                        <i class="fa-solid fa-xmark"></i>
                                     </button>
                                 </div>
                             }
@@ -1257,7 +1291,7 @@
                                     }
                                 }
 
-                                <div style="margin-top: 10px; width: 5%;">
+                                <div style="margin-top: 20px; width: 5%;">
                                     <button @onclick="@(e => AñadirTierBundle(e))" class="boton-pequeño" style="text-align: center;"><i class="fa-solid fa-plus"></i></button>
                                 </div>
                             </div>
@@ -1684,24 +1718,7 @@
             ActualizarMensajePendientes(int.Parse(BaseDatos.Tiendas.Admin.LeerDato(conexion, "pendientes")));
             ActualizarMensajeErrores(int.Parse(BaseDatos.Tiendas.Admin.LeerDato(conexion, "errores")));
             ActualizarMensajeSolicitudes(int.Parse(BaseDatos.Tiendas.Admin.LeerDato(conexion, "solicitudes")));
-
-            //----------------------------------
-
-            Aviso aviso1 = BaseDatos.Avisos.Buscar.Ejecutar("en", conexion);
-
-            if (aviso1 != null)
-            {
-                avisoEn = aviso1.Mensaje;
-            }
-
-            Aviso aviso2 = BaseDatos.Avisos.Buscar.Ejecutar("es", conexion);
-
-            if (aviso2 != null)
-            {
-                avisoEs = aviso2.Mensaje;
-            }
         }
-
     }
 
     private void MostrarAdmin(MouseEventArgs e)
@@ -1801,6 +1818,7 @@
     private bool mostrarAvisos = false;
     private string avisoEn = string.Empty;
     private string avisoEs = string.Empty;
+    private string avisoEnlace = string.Empty;
 
     private void MostrarCerrarAvisos(MouseEventArgs e)
     {
@@ -1815,10 +1833,45 @@
             mostrarAvisos = true;
 
             titulo = "Avisos";
+
+            if (conexion.State != System.Data.ConnectionState.Open)
+            {
+                conexion = Herramientas.BaseDatos.Conectar();
+            }
+
+            Aviso aviso1 = BaseDatos.Avisos.Buscar.Ejecutar("en", conexion);
+
+            if (aviso1 != null)
+            {
+                avisoEn = aviso1.Mensaje.Trim();
+                avisoEnlace = aviso1.Enlace.Trim();
+            }
+
+            Aviso aviso2 = BaseDatos.Avisos.Buscar.Ejecutar("es", conexion);
+
+            if (aviso2 != null)
+            {
+                avisoEs = aviso2.Mensaje.Trim();
+            }
         }
     }
 
-    private void ActualizarAviso(ChangeEventArgs texto, string idioma)
+    private void CambiarAvisoEn(ChangeEventArgs texto)
+    {
+        avisoEn = texto.Value.ToString();
+    }
+
+    private void CambiarAvisoEs(ChangeEventArgs texto)
+    {
+        avisoEs = texto.Value.ToString();
+    }
+
+    private void CambiarAvisoEnlace(ChangeEventArgs texto)
+    {
+        avisoEnlace = texto.Value.ToString();
+    }
+
+    private void ActualizarAviso(MouseEventArgs e)
     {
         if (conexion.State != System.Data.ConnectionState.Open)
         {
@@ -1827,7 +1880,12 @@
 
         using (conexion)
         {
-            BaseDatos.Avisos.Actualizar.Ejecutar(texto.Value.ToString().Trim(), idioma, conexion);
+            BaseDatos.Avisos.Actualizar.Ejecutar(avisoEn, "en", avisoEnlace, conexion);
+            BaseDatos.Avisos.Actualizar.Ejecutar(avisoEs, "es", avisoEnlace, conexion);
+
+            avisoEn = null;
+            avisoEs = null;
+            avisoEnlace = null;
         }       
     }
 
@@ -1840,11 +1898,12 @@
 
         using (conexion)
         {
-            BaseDatos.Avisos.Actualizar.Ejecutar("", "en", conexion);
-            BaseDatos.Avisos.Actualizar.Ejecutar("", "es", conexion);
+            BaseDatos.Avisos.Actualizar.Ejecutar("", "en", "", conexion);
+            BaseDatos.Avisos.Actualizar.Ejecutar("", "es", "", conexion);
 
             avisoEn = null;
             avisoEs = null;
+            avisoEnlace = null;
         }
     }
 
@@ -1855,16 +1914,16 @@
     private bool mostrarSolicitudes = false;
 
     List<BaseDatos.Usuarios.SolicitudGrupo> listaSolicitudes = new List<BaseDatos.Usuarios.SolicitudGrupo>();
-    private int nuevoasSolicitudesCantidad = 0;
+    private int nuevasSolicitudesCantidad = 0;
     private string nuevasSolicitudesMensaje = string.Empty;
 
     private void ActualizarMensajeSolicitudes(int i)
     {
-        nuevoasSolicitudesCantidad = i;
+        nuevasSolicitudesCantidad = i;
 
-        if (nuevoasSolicitudesCantidad > 0)
+        if (nuevasSolicitudesCantidad > 0)
         {
-            nuevasSolicitudesMensaje = "(" + nuevoasSolicitudesCantidad.ToString() + ")";
+            nuevasSolicitudesMensaje = "(" + nuevasSolicitudesCantidad.ToString() + ")";
         }
     }
 
@@ -1894,9 +1953,34 @@
         }
     }
 
-    private void BorrarSolicitud(BaseDatos.Usuarios.SolicitudGrupo solicitud)
+    private void AprobarSolicitud(MouseEventArgs e, BaseDatos.Usuarios.SolicitudGrupo solicitud)
     {
-        
+        if (conexion.State != System.Data.ConnectionState.Open)
+        {
+            conexion = Herramientas.BaseDatos.Conectar();
+        }
+
+        using (conexion)
+        {
+            BaseDatos.Usuarios.Solicitud.AprobarUsuario(solicitud.IdUsuario, conexion);
+
+            listaSolicitudes = BaseDatos.Usuarios.Solicitud.DevolverTodo(conexion);
+        }
+    }
+
+    private void BorrarSolicitud(MouseEventArgs e, BaseDatos.Usuarios.SolicitudGrupo solicitud)
+    {
+        if (conexion.State != System.Data.ConnectionState.Open)
+        {
+            conexion = Herramientas.BaseDatos.Conectar();
+        }
+
+        using (conexion)
+        {
+            BaseDatos.Usuarios.Solicitud.BorrarUsuario(solicitud.IdUsuario, conexion);
+
+            listaSolicitudes = BaseDatos.Usuarios.Solicitud.DevolverTodo(conexion);
+        }
     }
 
     #endregion
