--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -459,11 +459,11 @@
 					{
 						<hr/>
 						<div style="display: flex; align-items: center; font-size: 16px; padding: 15px 5px;">
-							<div style="margin-right: 15px;">
+							<div style="margin-right: 15px; width: 22px; height: 22px;">
 								<img src="@GratisCargar.DevolverGratis(gratis2.Tipo).ImagenIcono" style="max-width: 22px; max-height: 22px;" />
 							</div>
 
-							<div style="margin-right: 30px;">
+							<div style="margin-right: 30px; width: 22px; height: 22px;">
 								<img src="@JuegoDRM2.SacarImagen(gratis2.DRM)" style="max-width: 22px; max-height: 22px;" />
 							</div>
 
@@ -530,11 +530,11 @@
 					{
 						<hr />
 						<div style="display: flex; align-items: center; font-size: 16px; padding: 15px 5px;">
-							<div style="margin-right: 15px;">
+							<div style="margin-right: 15px; width: 22px; height: 22px;">
 								<img src="@SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).ImagenIcono" style="max-width: 22px; max-height: 22px;" />
 							</div>
 
-							<div style="margin-right: 30px;">
+							<div style="margin-right: 30px; width: 22px; height: 22px;">
 								<img src="@JuegoDRM2.SacarImagen(suscripcion2.DRM)" style="max-width: 22px; max-height: 22px;" />
 							</div>
 
