--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -102,7 +102,7 @@
 								<img src="@CargarImagenTienda(juego)" style="width: 100%;"/>
 							</div>
 
-							<div style="padding: 10px 15px; margin: 0px 30px;" class="juego-descuento">
+							<div style="padding: 10px 15px; margin: 0px 30px 0px 40px;" class="juego-descuento">
 								@CargarDescuento(juego)
 							</div>
 
