--- a/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
@@ -2213,7 +2213,7 @@
             tienda = BaseDatos.Tiendas.Admin.TiendaSiguiente(conexion);
         }
 
-        return tienda.id + " " + Herramientas.Calculadora.DiferenciaTiempo(tienda.fecha, "es-ES");
+        return tienda.Id + " " + Herramientas.Calculadora.DiferenciaTiempo(tienda.Fecha, "es-ES");
     }
 
     #endregion
